--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Don Lim | Portfolio</title>
+  <title>Jack Chan | Portfolio</title>
   <link rel="icon" href="photos/me.jpg" type="image/x-icon" />
   <meta property="og:locale" content="en-US">
-  <meta property="og:site_name" content="Don Lim">
-  <meta property="og:title" content="Don Lim">
-  <link rel="canonical" href="https://donlim93.github.io/">
+  <meta property="og:site_name" content="Jack Chan">
+  <meta property="og:title" content="Jack Chan">
+  <link rel="canonical" href="https://jackchan.github.io/">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-  <meta property="og:url" content="https://donlim93.github.io/">
+  <meta property="og:url" content="https://jackchan.github.io/">
   <meta property="og:description" content="About me">
   <script type="application/ld+json">
     {
-      "@context": "http://schema.org",
+      "@context": "http://datalab.life",
       "@type": "Person",
-      "name": "Don Lim",
-      "url": "https://donlim93.github.io",
+      "name": "jack Chan",
+      "url": "https://jackchan.datalab.life",
       "sameAs": null
     }
   </script> <!-- end SEO -->
@@ -57,12 +57,12 @@
   <link rel="icon" type="image/png" href="images/android-chrome-192x192b32b.html?v=M44lzPylqQ" sizes="192x192">
   <link rel="icon" type="image/png" href="images/favicon-96x96b32b.html?v=M44lzPylqQ" sizes="96x96">
   <link rel="icon" type="image/png" href="images/favicon-16x16b32b.html?v=M44lzPylqQ" sizes="16x16">
-  <link rel="manifest" href="https://donlim93.github.io/images/manifest.json?v=M44lzPylqQ">
-  <link rel="mask-icon" href="https://donlim93.github.io/images/safari-pinned-tab.svg?v=M44lzPylqQ" color="#000000">
+  <link rel="manifest" href="https://jackchan.github.io/images/manifest.json?v=M44lzPylqQ">
+  <link rel="mask-icon" href="https://jackchan.github.io/images/safari-pinned-tab.svg?v=M44lzPylqQ" color="#000000">
   <link rel="shortcut icon" href="images/faviconb32b.html?v=M44lzPylqQ">
   <meta name="msapplication-TileColor" content="#000000">
-  <meta name="msapplication-TileImage" content="https://donlim93.github.io/images/mstile-144x144.png?v=M44lzPylqQ">
-  <meta name="msapplication-config" content="https://donlim93.github.io/images/browserconfig.xml?v=M44lzPylqQ">
+  <meta name="msapplication-TileImage" content="https://jackchan.github.io/images/mstile-144x144.png?v=M44lzPylqQ">
+  <meta name="msapplication-config" content="https://jackchan.github.io/images/browserconfig.xml?v=M44lzPylqQ">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="assets/css/academicons.css" />
   <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); 
@@ -82,9 +82,9 @@
             <div class="navicon"></div>
           </button>
           <ul class="visible-links">
-            <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a>
+            <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://jackchan.datalab.life/">Jack Chan</a>
             </li>
-            <li class="masthead__menu-item"><a href="https://donlim93.github.io/">Home</a></li>
+            <li class="masthead__menu-item"><a href="https://jackchan.datalab.life/">Home</a></li>
             <li class="masthead__menu-item"><a href="pages/papers.html">Papers</a></li>
             <li class="masthead__menu-item"><a href="pages/coursework.html">Coursework</a></li>
             <li class="masthead__menu-item"><a href="pages/certifications.html">Certifications</a></li>
@@ -98,17 +98,17 @@
   <div id="main" role="main">
     <div class="sidebar sticky">
       <div itemscope itemtype="http://schema.org/Person">
-        <div class="author__avatar"> <img src="images/me.jpg" class="author__avatar" alt="Don Lim">
+        <div class="author__avatar"> <img src="images/me.jpg" class="author__avatar" alt="Jack Chan">
         </div>
         <div class="author__content">
-          <h3 class="author__name">Don Lim</h3>
-          <p class="author__bio">Analyst | Causal Inference | Econometrics | Machine Learning | Data
-            Visualization</p>
+          <h3 class="author__name">Jack Chan</h3>
+          <p class="author__bio">Data Analyst | Business Forecasting | Business Analytics | Machine Learning | Data
+            Data Visualization</p>
         </div>
         <div class="author__urls-wrapper"> <button class="btn btn--inverse">Contact</button>
           <ul class="author__urls social-icons">
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
-            <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
+            <li><a href="mailto:jackchan@datalab.life" target="_blank"><i class="fa fa-fw fa-envelope-square"
                   aria-hidden="true"></i> Email</a></li>
             <li><a href="cv/LimDon_resumeCV.pdf" target="_blank" rel="noopener noreferrer"><i
                   class="fa fa-fw fa-file-pdf" aria-hidden="true"></i> CV/Resume</a></li>
@@ -136,25 +136,21 @@
               }
             </style>
           </head>
-          <h2>About Me</h2>
-          <p><br /> I am an analyst with a background in IT support, causal inference, and economics. Currently, I am
-            interested in machine learning and data modeling, visualization, and prediction. <br />
-            <h2>Education</h2><br />
-            <b>Master of Science in Agricultural and Applied Economics</b><br />
-            <a href="https://www.ttu.edu/" target="_blank" rel="noopener noreferrer">Texas Tech University</a> <br />
-            <a href="https://www.depts.ttu.edu/aaec/" target="_blank" rel="noopener noreferrer">Department of
-              Agricultural and Applied Economics</a> <br />
-            Lubbock, Texas<br /><br />
-            <b>Master of Arts in Political Science, Philosophy, and Economics (PPE)</b><br />
-            <a href="https://www.cevroinstitut.cz/en/" target="_blank" rel="noopener noreferrer">CEVRO
-              Institute</a><br />
-            School of Political Studies <br />
-            Prague, Czech Republic<br /><br />
-            <b>Bachelor of Arts in General Studies (Political Science, Philosophy, History) </b><br />
-            <a href="https://umich.edu/" target="_blank" rel="noopener noreferrer">University of Michigan</a><br />
-            <a href="https://lsa.umich.edu/" target="_blank" rel="noopener noreferrer">College of Literature, Science
-              and the Arts</a> <br />
-            Ann Arbor, Michigan
+          <h2>关于我</h2>
+          <p><br /> 我是一名具有数据分析、商业分析、金融学背景以及计算机科学专业的WEB3产品架构师。目前，我是对数据分析、商业分析、人工智能开发和应用、商业项目数据可视化、商业预测和区块链技术应用的领域感兴趣，以及专攻发展。<br />
+            <h2>教育</h2><br />
+            <b>UNIVERSITY OF MICHIGAN</b><br />
+            <a href="https://www.coursera.org/learn/python-data-analysis/" target="_blank" rel="noopener noreferrer">Python数据科学</a> <br />
+            <br /><br />
+
+            <b>美国宾夕法尼亚大学</b><br />
+            <a href="https://www.coursera.org/specializations/business-analytics" target="_blank" rel="noopener noreferrer">沃顿商学院</a> <br />
+            <a href="https://www.coursera.org/specializations/business-analytics" target="_blank" rel="noopener noreferrer">商业分析</a> <br />
+            <br /><br />
+
+            <b>中国广东海洋大学</b><br />
+            <a href="https://www.gdou.edu.cn/" target="_blank" rel="noopener noreferrer">计算机科学专业</a> <br />
+            <br /><br />
           </p>
           <script>
             ga('require', 'ipMeta', {
@@ -212,14 +208,14 @@
       <div class="page__footer-follow">
         <ul class="social-icons">
           <li><strong>Follow:</strong></li>
-          <li><a href="https://www.linkedin.com/in/lim-don/" target="_blank" rel="noopener noreferrer"><i
+          <li><a href="https://www.linkedin.com/in/chengwf/" target="_blank" rel="noopener noreferrer"><i
                 class="fa fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
           </li>
-          <li><a href="http://github.com/donlim93"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
+          <li><a href="http://jackchan.github.io/"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a>
           </li>
         </ul>
       </div>
-      <div class="page__footer-copyright">&copy; 2023 Don Lim.</div>
+      <div class="page__footer-copyright">&copy; 2024 Jack Chan.</div>
     </footer>
   </div>
   <script src="assets/js/main.min.js"></script>
